--- a/apollo-gql/package.json
+++ b/apollo-gql/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "apollo-server": "^2.19.1",
+    "mongoose": "^5.11.8",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   }
