--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,40 +1,52 @@
-version: '3.3'
+version: "3.3"
 
 volumes:
-    mysql-volume:
-    mongo-volume:
+  mysql-volume:
+  mongo-volume:
 
 services:
-    apollo-gql:
-        image: taktakty/apollo-gql:latest
-        build:
-            context: apollo-gql
-            target: development
-        container_name: apollo-gql
-        ports:
-            - "4000:4000"
-        depends_on:
-            - mongo
-            - mysql
-        volumes:
-            - ./apollo-gql/src:/app/src
+  apollo-gql:
+    image: taktakty/apollo-gql:latest
+    build:
+      context: apollo-gql
+      target: development
+    container_name: apollo-gql
+    ports:
+      - "4000:4000"
+    depends_on:
+      - mongo
+      - mysql
+    volumes:
+      - ./apollo-gql/src:/app/src
 
-    mongo:
-        image: mongo:3.6.21
-        container_name: mongo
-        volumes:
-            - mongo-volume:/data/db
+  grpcserver:
+    image: taktakty/grpcserver:latest
+    build:
+      context: grpcserver
+      target: development
+    container_name: grpcserver
+    ports:
+      - "8000:8000"
+    depends_on:
+      - mysql
+    volumes:
+      - ./grpcserver:/app
 
-    mysql:
-        image: mysql:5.7.32
-        container_name: mysql
-        environment:
-            - MYSQL_ROOT_PASSWORD=dev1234
-            - MYSQL_DATABASE=dev
-            - MYSQL_USER=dev
-            - MYSQL_PASSWORD=dev1234
-        volumes:
-            - mysql-volume:/var/lib/mysql
-        ports:
-            - 3306:3306
+  mongo:
+    image: mongo:3.6.21
+    container_name: mongo
+    volumes:
+      - mongo-volume:/data/db
 
+  mysql:
+    image: mysql:5.7.32
+    container_name: mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=dev1234
+      - MYSQL_DATABASE=dev
+      - MYSQL_USER=dev
+      - MYSQL_PASSWORD=dev1234
+    volumes:
+      - mysql-volume:/var/lib/mysql
+    ports:
+      - 3306:3306
