AMS-16 AMS-17 AMS-18 AMS-19 AMS-20 #comment add sign up and sign in feature #resolve

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,8 @@ services:
       - mysql
     volumes:
       - ./apollo-gql/src:/app/src
+    env_file:
+      - .env
 
   grpcserver:
     image: taktakty/grpcserver:latest
