--- a/apollo-gql/package.json
+++ b/apollo-gql/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^4.5.6",
     "apollo-server": "^2.19.1",
     "mongoose": "^5.11.8",
     "mysql2": "^2.2.5",
