AMS-9 add create room mutation

--- a/apollo-gql/.babelrc
+++ b/apollo-gql/.babelrc
@@ -10,5 +10,13 @@
     ]
   ],
   "sourceMaps": "inline",
-  "retainLines": true
+  "retainLines": true,
+  "plugins": [
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ]
+  ]
 }
