--- a/apollo-gql/Dockerfile
+++ b/apollo-gql/Dockerfile
@@ -3,23 +3,19 @@ FROM node:12.20.0 AS development
 
 WORKDIR /app
 
-COPY .babelrc ./
 COPY package*.json ./
 
 RUN npm install
+
+COPY .babelrc ./
 
 EXPOSE 4000
 
 CMD ["npm", "run", "start"]
 
 # Builder image
-FROM node:12.20.0 AS builder
+FROM development AS builder
 
-WORKDIR /app
-
-COPY --from=development /app/node_modules ./node_modules
-COPY .babelrc ./
-COPY package*.json ./
 COPY src ./src
 
 RUN npm run build
