--- a/apollo-gql/package.json
+++ b/apollo-gql/package.json
@@ -14,15 +14,24 @@
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
+    "@babel/plugin-proposal-decorators": "^7.12.12",
     "@babel/preset-env": "^7.12.11",
     "eslint": "^7.16.0",
+    "grpc-tools": "^1.10.0",
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "@graphql-tools/utils": "^7.2.3",
+    "@grpc/grpc-js": "^1.2.2",
+    "@grpc/proto-loader": "^0.5.5",
     "amazon-cognito-identity-js": "^4.5.6",
+    "apollo-datasource-grpc": "^1.0.0",
     "apollo-server": "^2.19.1",
+    "graphql-import-node": "^0.0.4",
+    "graphql-modules": "^1.1.0",
     "mongoose": "^5.11.8",
     "mysql2": "^2.2.5",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^6.3.5"
   }
 }
