--- a/core/package.json
+++ b/core/package.json
@@ -29,8 +29,13 @@
   },
   "lint-staged": {
     "*.{ts,graphql,js,css,md}": [
-      "npm run prettier:base --write",
+      "npm run prettier:base -- --write",
       "git add"
     ]
+  },
+  "dependencies": {
+    "apollo-server": "^2.19.1",
+    "graphql": "^15.4.0",
+    "graphql-import-node": "0.0.4"
   }
 }
