--- a/core/package.json
+++ b/core/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^14.14.20",
+    "@types/validator": "^13.1.3",
     "copyfiles": "^2.4.1",
     "husky": "^4.3.7",
     "lint-staged": "^10.5.3",
@@ -36,6 +37,8 @@
   "dependencies": {
     "apollo-server": "^2.19.1",
     "graphql": "^15.4.0",
-    "graphql-import-node": "0.0.4"
+    "graphql-import-node": "0.0.4",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
   }
 }
