--- a/core/package.json
+++ b/core/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.ts",
   "license": "MIT",
   "devDependencies": {
+    "@graphql-codegen/cli": "1.20.0",
     "@types/node": "^14.14.20",
+    "@types/uuid": "^8.3.0",
     "@types/validator": "^13.1.3",
     "copyfiles": "^2.4.1",
     "husky": "^4.3.7",
@@ -13,7 +15,11 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "@graphql-codegen/typescript-resolvers": "1.18.1",
+    "@graphql-codegen/typescript": "1.20.0",
+    "@graphql-codegen/typescript-mongodb": "1.17.9",
+    "@graphql-codegen/introspection": "1.18.1"
   },
   "scripts": {
     "build": "npx tsc && copyfiles -u 1 'src/**/*.{graphql,proto}' 'dist/'",
@@ -21,7 +27,8 @@
     "start": "npm run build:live",
     "prettier:base": "prettier --parser typescript --single-quote",
     "prettier:check": "npm run prettier:base -- --check \"src/**/*.{ts,tsx}\"",
-    "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\""
+    "prettier:write": "npm run prettier:base -- --write \"src/**/*.{ts,tsx}\"",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "husky": {
     "hooks": {
@@ -35,6 +42,8 @@
     ]
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^4.5.7",
+    "apollo-datasource": "^0.7.2",
     "apollo-server": "^2.19.1",
     "graphql": "^15.4.0",
     "graphql-import-node": "0.0.4",
